--- a/src/Components/About/AboutContent.module.css
+++ b/src/Components/About/AboutContent.module.css
@@ -47,7 +47,7 @@
     display: inline-block;
     padding: 10px;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: clamp(14px, 1vw, 18px);
 }
 
 .btn_primary {
@@ -188,6 +188,15 @@
 
     .right .question {
         font-size: 12px;
+    }
+
+    .details{
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
+    .info .export a{
+        padding: 5px;
     }
 
     .services_box {
