--- a/src/Components/Home/LandingPage.module.css
+++ b/src/Components/Home/LandingPage.module.css
@@ -11,7 +11,7 @@
 }
 
 .landing_img{
-    position: absolute;
+    /* position: absolute;
     top: 0;
     right: 0;
     width: 50%;
@@ -20,7 +20,21 @@
     z-index: -1;
     pointer-events: none;
     background: linear-gradient(to top, var(--color-bg) 40%, transparent), 
-            repeating-linear-gradient(to left, var(--color-secondary), transparent 10px, var(--color-secondary) 20px);
+            repeating-linear-gradient(to left, var(--color-secondary), transparent 10px, var(--color-secondary) 20px); */
+    position: absolute;
+    top: 50%;
+    right: 100px;
+    width: 400px;
+    transform: translateY(-50%);
+    aspect-ratio: 1;
+    /* height: 95%; */
+    opacity: .4;
+    z-index: -1;
+    pointer-events: none;
+    border-radius: 50%;
+    background-color: var(--color-overlay);
+    border: 10px solid var(--color-bg);
+    overflow: hidden;
 }
 
 .landing_img img{
