--- a/src/Components/ui/Settings/Settings.module.css
+++ b/src/Components/ui/Settings/Settings.module.css
@@ -1,43 +1,77 @@
 .settings {
   position: fixed;
-  top: 50%;
-  right: 100px;
-  transform: translateY(-50%);
-  z-index: 1;
-}
-
-.settingsButton {
-  background-color: var(--color-overlay);
-  border: none;
-  padding: 12px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background 0.3s;
-}
-
-.settingsButton:hover {
-  background-color: var(--color-secondary);
-}
-
-.settingsButton svg{
-    transform: rotate(0deg);
-    animation: rotated 2s ease-in-out infinite;
-}
-
-@keyframes rotated {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-.settingsPanel {
-  position: fixed;
-  top: 2px;
-  right: 45px;
-  background: var(--color-overlay);
-  padding: 16px;
-  border-radius: 8px;
+  top: 0;
+  right: -200px;
+  height: 100vh;
   width: 200px;
+  padding: 10px;
+  background-color: var(--color-bg);
+  border-left: 1px solid var(--color-third); 
+  transition: all .3s ease-in-out;
+  z-index: 1000;
+}
+
+.settings_toggle{
+  position: absolute;
+  top: 150px;
+  left: -40px;
+  /* width: 40px;
+  height: 40px; */
+  padding: 10px;
+  font-size: 20px;
+  border: 1px solid var(--color-third);
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+  background-color: inherit;
+  cursor: pointer;
+  transition: all .5s ease;
+
+}
+
+.settings_toggle path{
+  color:  var(--color-text);
+  transition: all .5s ease;
+}
+
+.settings_content{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.option_box{
+  padding: 20px;
+  background-color: var(--color-overlay);
+  border-radius: 10px;
+}
+
+.option_box h4{
+  font-size: clamp(12px, 1vw, 14px);
+  font-family: var(--font-secondary);
+  font-weight: 600;
+}
+
+.option_btn{
+  width: 50px;
+  display: inline-block;
+  background-color: var(--color-secondary);
+  color: var(--color-bg);
+  font-size: 11px;
+  font-family: var(--font-secondary);
+  font-weight: 500;
+  text-align: center;
+  padding: 3px 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.open{
+  right: 0;
+  /* transform: translateX(0); */
+}
+
+.active{
+  opacity: 1;
 }
