--- a/src/Components/ui/Square/Square.module.css
+++ b/src/Components/ui/Square/Square.module.css
@@ -6,12 +6,10 @@
     left: -30px; */
     transform: rotate(45deg);
     background-color: var(--color-secondary);
-    display: flex
-;
+    display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    margin-right: 20px;
 }
 .square_child{
     aspect-ratio: 1/1;
