--- a/src/Components/ui/Settings/Settings.module.css
+++ b/src/Components/ui/Settings/Settings.module.css
@@ -5,7 +5,8 @@
   height: 100vh;
   width: 200px;
   padding: 10px;
-  background-color: var(--color-bg);
+  background-color: color-mix(in srgb, var(--color-bg), transparent 30%);
+  backdrop-filter: blur(2px);
   border-left: 1px solid var(--color-third); 
   transition: all .3s ease-in-out;
   z-index: 1000;
@@ -23,6 +24,7 @@
   border-right: none;
   border-radius: 10px 0 0 10px;
   background-color: inherit;
+  backdrop-filter: blur(2px);
   cursor: pointer;
   transition: all .5s ease;
 
