Refactored navbar toggle logic for cleaner and more efficient switching between mobile and desktop views

--- a/src/Components/Common/HighwaySlider/HighwaySlider.module.css
+++ b/src/Components/Common/HighwaySlider/HighwaySlider.module.css
@@ -1,5 +1,5 @@
-.no_marg {
-    margin: 0;
+.slide_option {
+    margin-bottom: 60px;
 }
 
 .container {
@@ -38,6 +38,7 @@
     align-items: center;
     width: 180px;
     border-radius: 5px;
+    font-size: 40px;
     transition: 1s;
 }
 
