--- a/src/Components/About/AboutContent.module.css
+++ b/src/Components/About/AboutContent.module.css
@@ -35,8 +35,9 @@
 
 .right .answer {
     font-family: var(--font-secondary);
+    font-weight: 400;
     letter-spacing: 1px;
-    color: #777;
+    color: var(--color-third);
 }
 
 .export {
