--- a/src/Components/Common/Navbar/NavbarMobile.module.css
+++ b/src/Components/Common/Navbar/NavbarMobile.module.css
@@ -1,4 +1,5 @@
 .stroke{
+  display: none;
   position: fixed;
   top: 30px;
   left: 50%;
@@ -17,7 +18,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  background-color: var(--color-overlay);
+  background-color: var(--color-bg);
   padding: 8px 0;
   border-radius: inherit;
 }
@@ -57,8 +58,13 @@
   transition: all 1s ease;
 }
 
+.show{
+  display: block;
+}
+
 @media screen and (max-width: 768px) {
   .stroke {
+    display: block;
     width: 80%;
   }
 }
