--- a/src/Components/Portfolio/PortfolioContent.module.css
+++ b/src/Components/Portfolio/PortfolioContent.module.css
@@ -49,6 +49,32 @@
     cursor: default;
 }
 
+.load{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.load_more {
+    font-family: var(--font-secondary);
+    background-color: var(--color-overlay);
+    color: var(--color-text);
+    font-weight: 600;
+    padding: 10px 20px;
+    box-shadow: 0px 0px 0px 2px var(--color-text), 2px 2px 0px 2px var(--color-secondary);
+    cursor: pointer;
+    opacity: .6;
+    transition: all .5s ease;
+}
+
+.load_more:hover {
+    background-color: var(--color-secondary);
+    box-shadow: 0px 0px 5px var(--color-secondary);
+    opacity: 1;
+}
+
 @media (max-width: 767px) {
     .pagination{
         gap: 5px;
