--- a/src/Components/ui/Testimonial/Reviews.module.css
+++ b/src/Components/ui/Testimonial/Reviews.module.css
@@ -239,18 +239,19 @@
 
 .load_more {
     font-family: var(--font-secondary);
-    background-color: var(--color-third);
+    background-color: var(--color-overlay);
     color: var(--color-text);
-    border: 1px solid var(--color-overlay);
-    border-radius: 5px;
     font-weight: 600;
     padding: 10px 20px;
+    box-shadow: 0px 0px 0px 2px var(--color-text), 2px 2px 0px 2px var(--color-secondary);
     cursor: pointer;
     opacity: .6;
     transition: all .5s ease;
 }
 
 .load_more:hover {
+    background-color: var(--color-secondary);
+    box-shadow: 0px 0px 5px var(--color-secondary);
     opacity: 1;
 }
 
